--- a/parallax.html
+++ b/parallax.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Bikini Bottom</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
         <section>
           <div class="container">
-          
+          <img class="island" src="./images/spongebobisland.webp">
              <p>Bacon ipsum dolor amet sirloin picanha meatloaf, biltong tenderloin turducken chicken cow frankfurter shank. Swine hamburger pork chop biltong, capicola turducken short ribs filet mignon sirloin corned beef sausage short loin. Shankle cow flank meatloaf tongue ground round. Beef pork belly spare ribs andouille burgdoggen leberkas pork.</p>
            
           </div>
@@ -50,7 +50,7 @@
         </footer>
 
     <!-- Parallax Background Layers -->
-    <div class="parallax-container" data-parallax="scroll" data-image-src="./images/bestbuds.png" data-z-index="1">
+    <div class="parallax-container" data-parallax="scroll" data-image-src="./images/underwater mid way.avif" data-z-index="1">
         <div class="parallax-content">
             <h1>Title</h1>
             <p>Bacon ipsum dolor amet sirloin picanha meatloaf, biltong tenderloin turducken chicken cow frankfurter shank. Swine hamburger pork chop biltong, capicola turducken short ribs filet mignon sirloin corned beef sausage short loin. Shankle cow flank meatloaf tongue ground round. Beef pork belly spare ribs andouille burgdoggen leberkas pork.</p>
