--- a/parallax.html
+++ b/parallax.html
@@ -27,25 +27,25 @@
                 <img src="./images/rippedpants.png" width="5%" alt="#">
               </span>
               <span class="squidward">
-                <img src="./images/squidward.webp" width="5%" alt="">
+                <img src="./images/squidward.webp" width="5%" alt="#">
               </span>
               <span class="sandy">
-                <img src="./images/sandy.webp" width="5%" alt="">
+                <img src="./images/sandy.webp" width="5%" alt="#">
               </span>
               <span class="patrick">
-                <img src="./images/patrick.webp" width="5%" alt="">
+                <img src="./images/patrick.webp" width="5%" alt="#">
               </span>
               <span class="mrspuff">
-                <img src="./images/mrspuff.webp" width="5%" alt="">
+                <img src="./images/mrspuff.webp" width="5%" alt="#">
               </span>
               <span class="mrkrabs">
-                <img src="./images/mrkrabs.webp" width="5%" alt="">
+                <img src="./images/mrkrabs.webp" width="5%" alt="#">
               </span>
               <span class="gary">
-                <img src="./images/gary.webp" width="5%" alt="">
+                <img src="./images/gary.webp" width="5%" alt="#">
               </span>
               <span class="plankton">
-                <img src="./images/Plankton.webp" width="5%" alt="">
+                <img src="./images/Plankton.webp" width="5%" alt="#">
               </span>
             </div>
     
@@ -63,25 +63,25 @@
                 <img src="./images/bestbuds.png" width="5%" alt="#">
               </span>
               <span class="">
-                <img src="./images/characterspng.png" width="5%" alt="">
+                <img src="./images/characterspng.png" width="5%" alt="#">
               </span>
               <span class="">
-                <img src="./images/allcharacters.png" width="5%" alt="">
+                <img src="./images/allcharacters.png" width="5%" alt="#">
               </span>
               <span class="">
-                <img src="./images/charactersmost.jpg" width="5%" alt="">
+                <img src="./images/charactersmost.jpg" width="5%" alt="#">
               </span>
               <span class="mrspuff">
-                <img src="./images/ughh.jpg" width="5%" alt="">
+                <img src="./images/ughh.jpg" width="5%" alt="#">
               </span>
               <span class="mrkrabs">
-                <img src="./images/sbcharactersinline.avif" width="5%" alt="">
+                <img src="./images/sbcharactersinline.avif" width="5%" alt="#">
               </span>
               <span class="gary">
-                <img src="./images/photos.webp" width="5%" alt="">
+                <img src="./images/photos.webp" width="5%" alt="#">
               </span>
               <span class="plankton">
-                <img src="./images/allcharactrscomplete.jpg" width="5%" alt="">
+                <img src="./images/allcharactrscomplete.jpg" width="5%" alt="#">
               </span>
             </div>
           </div>
@@ -99,19 +99,19 @@
                 <img src="./images/workhat.webp" width="5%" alt="#">
               </span>
               <span class="">
-                <img src="./images/squidsclarinet.webp" width="5%" alt="">
+                <img src="./images/squidsclarinet.webp" width="5%" alt="#">
               </span>
               <span class="">
-                <img src="./images/Magicalconch.webp" width="5%" alt="">
+                <img src="./images/Magicalconch.webp" width="5%" alt="#">
               </span>
               <span class="">
-                <img src="./images/jellyfish.webp" width="5%" alt="">
+                <img src="./images/jellyfish.webp" width="5%" alt="#">
               </span>
               <span class="mrspuff">
-                <img src="./images/krabbypatty.webp" width="5%" alt="">
+                <img src="./images/krabbypatty.webp" width="5%" alt="#">
               </span>
               <span class="mrkrabs">
-                <img src="./images/spatula.webp" width="5%" alt="">
+                <img src="./images/spatula.webp" width="5%" alt="#">
               </span>
               
             </div>
