--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
             <h2 id="installation"> Main Characters</h2>
             <div class="animate__animatedanimate__bounce">
               <span class="rippedpants">
-                <img src="./images/rippedpants.png" width="5%" alt="#">
+                <img src="./images/rippedpants.png" width="5%" alt="spongebob with ripped pants">
               </span>
               <span class="squidward">
-                <img src="./images/squidward.webp" width="5%" alt="#">
+                <img src="./images/squidward.webp" width="5%" alt="squidward">
               </span>
               <span class="sandy">
-                <img src="./images/sandy.webp" width="5%" alt="#">
+                <img src="./images/sandy.webp" width="5%" alt="sandy">
               </span>
               <span class="patrick">
-                <img src="./images/patrick.webp" width="5%" alt="#">
+                <img src="./images/patrick.webp" width="5%" alt="patrick">
               </span>
               <span class="mrspuff">
-                <img src="./images/mrspuff.webp" width="5%" alt="#">
+                <img src="./images/mrspuff.webp" width="5%" alt="mrspuff">
               </span>
               <span class="mrkrabs">
-                <img src="./images/mrkrabs.webp" width="5%" alt="#">
+                <img src="./images/mrkrabs.webp" width="5%" alt="mrkrabs">
               </span>
               <span class="gary">
-                <img src="./images/gary.webp" width="5%" alt="#">
+                <img src="./images/gary.webp" width="5%" alt="gary">
               </span>
               <span class="plankton">
-                <img src="./images/Plankton.webp" width="5%" alt="#">
+                <img src="./images/Plankton.webp" width="5%" alt="plankton">
               </span>
             </div>
     
@@ -60,10 +60,10 @@
             <h2 id="options">Photos</h2>
             <div class="animate__animatedanimate__swing">
               <span class="">
-                <img src="./images/bestbuds.png" width="5%" alt="#">
+                <img src="./images/bestbuds.png" width="5%" alt="spongebob and patrick">
               </span>
               <span class="">
-                <img src="./images/characterspng.png" width="5%" alt="#">
+                <img src="./images/characterspng.png" width="5%" alt="all of the spongebob characters">
               </span>
               <span class="">
                 <img src="./images/allcharacters.png" width="5%" alt="#">
@@ -96,22 +96,22 @@
             <h2 id="options">Items</h2>
             <div class="animate__animatedanimate__HB">
               <span class="">
-                <img src="./images/workhat.webp" width="5%" alt="#">
+                <img src="./images/workhat.webp" width="5%" alt="spongebobs work hat">
               </span>
               <span class="">
-                <img src="./images/squidsclarinet.webp" width="5%" alt="#">
+                <img src="./images/squidsclarinet.webp" width="5%" alt="squidwards clarinet">
               </span>
               <span class="">
-                <img src="./images/Magicalconch.webp" width="5%" alt="#">
+                <img src="./images/Magicalconch.webp" width="5%" alt="the magic conch">
               </span>
               <span class="">
-                <img src="./images/jellyfish.webp" width="5%" alt="#">
+                <img src="./images/jellyfish.webp" width="5%" alt="jellyfish">
               </span>
               <span class="mrspuff">
-                <img src="./images/krabbypatty.webp" width="5%" alt="#">
+                <img src="./images/krabbypatty.webp" width="5%" alt="a krabby patty">
               </span>
               <span class="mrkrabs">
-                <img src="./images/spatula.webp" width="5%" alt="#">
+                <img src="./images/spatula.webp" width="5%" alt="spongebobs spatula">
               </span>
               
             </div>
